<resources>
    <string name="app_name">DAOB</string>
    <string name="next_appointment">Các cuộc hẹn sắp tới</string>
    <string name="hint_uname">Tên đăng nhập</string>
    <string name="hint_pwd">Mật khẩu</string>
	<string name="login">Đăng nhập</string>
	<string name="logout">Đăng xuất</string>
	<string name="login_process">Đang kết nối tới hệ thống. Xin vui lòng chờ trong giây lát.</string>
	<string name="connect_fail">Không thể kết nối tới hệ thống. Xin vui lòng thử lại.</string>
	<string name="login_fail">Tài khoản hoặc mật khẩu không đúng. Xin vui lòng thử lại.</string>
	<string name="uname_empty">Tên tài khoản không được để trống.</string>
	<string name="pwd_empty">Mật khẩu không được để trống.</string>
	<string name="reason_canceled">Hãy để lại lời nhắn vì sao bạn hủy cuộc hẹn này.</string>
	<string name="create_busy_time">Bạn có muốn đánh dấu bận vào khoảng thời gian này?</string>
	<string name="reason_rejected">Hãy để lại lời nhắn vì sao bạn từ chối cuộc hẹn này.</string>
	<string name="home">Trang chủ</string>
	<string name="search_doctor">Tìm bác sĩ</string>
	<string name="hospital">Bệnh viện / Phòng khám:</string>
	<string name="speciality">Chuyên khoa:</string>
	<string name="doctor_name">Tìm theo tên bác sĩ</string>
	<string name="search">Tìm kiếm</string>
	<string name="view_calendar">Xem lịch</string>
	<string name="doctor_detail">Thông tin bác sĩ</string>
	<string name="meeting_all">Tất cả các cuộc hẹn</string>
	<string name="meeting_next">Tất cả các cuộc hẹn</string>
	<string name="doctor_free_time">Các giờ rảnh của bác sĩ trong ngày:</string>
	<string name="meeting_not_approved">Cuộc hẹn chưa xác nhận</string>
	<string name="meeting_today">Các cuộc hẹn hôm nay</string>
	<string name="lv_empty">Không có cuộc hẹn nào</string>
	<string name="doctor">Bác sĩ:</string>
	<string name="patient">Bệnh nhân:</string>
	<string name="start_time">Giờ rảnh:</string>
	<string name="start_space"> -  </string>
	<string name="white_space">       </string>
	<string name="update_success">Cập nhật thành công</string>
	<string name="place">Nơi khám:</string>
	<string name="date">Ngày khám:</string>
	<string name="hour">Giờ khám:</string>
	<string name="status">Trạng thái:</string>
	<string name="notes">Ghi chú:</string>
	<string name="pre_notes">Lời dặn:</string>
	<string name="pre_no_notes">Không có</string>
	<string name="loading">Đang tải dữ liệu...</string>
	<string name="processing">Đang xử lý...</string>
	<string name="status_new">chờ xác nhận</string>
	<string name="status_confirmed">đã xác nhận</string>
	<string name="status_done">đã khám</string>
	<string name="status_missed">không đến</string>
	<string name="status_canceled">đã hủy</string>
	<string name="status_rejected">đã từ chối</string>
	<string name="all">Tất cả</string>
	<string name="select_old_day">Không thể chọn ngày cũ.</string>
	<string name="btn_view_schedule">Xem lịch</string>
	<string name="no_result">Không có dữ liệu.</string>
	<string name="booking">Đặt lịch</string>
	<string name="appointment_info">Thông tin cuộc hẹn</string>
	<string name="finish_booking">Hoàn tất đặt lịch</string>
	<string name="confirm_app">Xác nhận</string>
	<string name="reject_app">Từ chối</string>
	<string name="done_app">Đã khám</string>
	<string name="booking_for">Bạn đặt lịch khám cho ai</string>
	<string name="mark_as_missed">Đánh dấu bệnh nhân không đến</string>
	<string name="for_me">Cho tôi</string>
	<string name="for_other">Đặt hộ người khác</string>
	<string name="booking_description">Miêu tả bệnh gửi bác sĩ</string>
	<string name="booking_email">Nhập email để nhận mã xác nhận</string>
	<string name="confirm_key">Nhập mã xác nhận</string>
	<string name="cancled_app">Hủy hẹn</string>
	<string name="miss_app">Không đến</string>
	<string name="phone">Số điện thoại</string>
	<string name="patient_phone">Số điện thoại:</string>
	<string name="address">Địa chỉ:</string>
	<string name="booking_name">Tên người khám</string>
	<string name="booking_old">Tuổi:</string>
	<string name="gender">Giới tính:</string>
	<string name="male">Nam</string>
	<string name="female">Nữ</string>
	<string name="message_cancel_booking">Bạn có muốn hủy cuộc hẹn này?</string>
	<string name="message_confirm_reject">Xác nhận hoặc từ chối</string>
	<string name="message_done_cancel">Xác nhận hoặc từ chối</string>
	<string name="btn_cancel_booking">Hủy</string>
	<string name="btn_cancel">Thoát</string>
	<string name="btn_yes">Có</string>
	<string name="btn_no">Không</string>
</resources>