<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/standar_margin"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="86dp"
                android:layout_height="wrap_content"
                android:text="@string/patient" />

            <TextView
                android:id="@+id/tv_doctor_app_patient"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/standar_margin"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="86dp"
                android:layout_height="wrap_content"
                android:text="@string/date" />

            <TextView
                android:id="@+id/tv_doctor_app_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/standar_margin"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="86dp"
                android:layout_height="wrap_content"
                android:text="@string/hour" />

            <TextView
                android:id="@+id/tv_doctor_app_start_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/standar_margin"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:text="@string/place" />

            <TextView
                android:id="@+id/tv_doctor_app_location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/standar_margin"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:text="@string/status" />

            <TextView
                android:id="@+id/tv_doctor_app_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/standar_margin"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:text="@string/notes" />

            <TextView
                android:id="@+id/tv_doctor_app_note"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <Button
            android:id="@+id/btn_confirm_app"
            android:layout_width="151dp"
            android:layout_height="34dp"
            android:layout_gravity="center_horizontal"
            android:layout_margin="@dimen/standar_margin"
            android:background="@drawable/button_selector"
            android:text="@string/confirm_app" />
        
        <Button
            android:id="@+id/btn_reject_app"
            android:layout_width="151dp"
            android:layout_height="34dp"
            android:layout_gravity="center_horizontal"
            android:layout_margin="@dimen/standar_margin"
            android:background="@drawable/button_selector"
            android:text="@string/reject_app" />
        
        <Button
            android:id="@+id/btn_cancel_app"
            android:layout_width="151dp"
            android:layout_height="34dp"
            android:layout_gravity="center_horizontal"
            android:layout_margin="@dimen/standar_margin"
            android:background="@drawable/button_selector"
            android:text="@string/cancled_app" />

    </LinearLayout>
    

</LinearLayout>
