<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/standar_margin"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:text="@string/patient" />

        <TextView
            android:id="@+id/tv_patient_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/standar_margin"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:text="@string/place" />

        <TextView
            android:id="@+id/tv_location_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/standar_margin"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:text="@string/date" />

        <TextView
            android:id="@+id/tv_date_appointment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/standar_margin"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:text="@string/hour" />

        <TextView
            android:id="@+id/tv_start_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/standar_margin"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:text="@string/notes" />

        <TextView
            android:id="@+id/tv_appointment_notes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/standar_margin"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:text="@string/status" />

        <TextView
            android:id="@+id/tv_appointment_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
    

</LinearLayout>
