<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/standar_margin"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="86dp"
                android:layout_height="wrap_content"
                android:text="@string/doctor" />

            <TextView
                android:id="@+id/tv_patient_app_doctor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/standar_margin"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="86dp"
                android:layout_height="wrap_content"
                android:text="@string/date" />

            <TextView
                android:id="@+id/tv_patient_app_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/standar_margin"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="86dp"
                android:layout_height="wrap_content"
                android:text="@string/hour" />

            <TextView
                android:id="@+id/tv_patient_app_start_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/standar_margin"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="86dp"
                android:layout_height="wrap_content"
                android:text="@string/place" />

            <TextView
                android:id="@+id/tv_patient_app_location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/standar_margin"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="86dp"
                android:layout_height="wrap_content"
                android:text="@string/status" />

            <TextView
                android:id="@+id/tv_patient_app_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/standar_margin"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="86dp"
                android:layout_height="wrap_content"
                android:text="@string/notes" />

            <TextView
                android:id="@+id/tv_patient_app_note"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <Button
            android:id="@+id/btn_patient_detail_cancel_app"
            android:layout_width="151dp"
            android:layout_height="34dp"
            android:layout_gravity="center_horizontal"
            android:layout_margin="@dimen/standar_margin"
            android:background="@drawable/button_selector"
            android:text="@string/cancled_app"
            android:visibility="gone" />
    </LinearLayout>

</LinearLayout>