<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/standar_margin"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:text="@string/doctor" />

        <TextView
            android:id="@+id/tv_doctor_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/standar_margin"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:text="@string/place" />

        <TextView
            android:id="@+id/tv_hospital_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/standar_margin"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:text="@string/date" />

        <TextView
            android:id="@+id/tv_date_meeting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/standar_margin"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:text="@string/hour" />

        <TextView
            android:id="@+id/tv_hour_meeting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/standar_margin"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:text="@string/status" />

        <TextView
            android:id="@+id/tv_status_meeting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

</LinearLayout>