<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

		
		
        <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/black" />
        
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/standar_margin"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="86dp"
                android:layout_height="wrap_content"
                android:text="@string/doctor" />

            <TextView
                android:id="@+id/tv_meeting_doctor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>  
        
		<LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/standar_margin"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="86dp"
                android:layout_height="wrap_content"
                android:text="@string/date" />

            <TextView
                android:id="@+id/tv_meeting_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>  
        
		<LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/standar_margin"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:text="@string/place" />

            <TextView
                android:id="@+id/tv_meeting_location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>  
        
		<EditText
            android:id="@+id/tb_confim_key"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/standar_margin"
            android:ems="10"
            android:gravity="top"
            android:hint="@string/confirm_key"
            android:inputType="number" >
        </EditText>
        
		<Button
            android:id="@+id/btn_finish_booking"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/standar_margin"
            android:background="@drawable/button_selector"
            android:text="@string/finish_booking" />
	    
    </LinearLayout>    
    
</ScrollView>
